--- a/Business/Gumtree.Business.csproj
+++ b/Business/Gumtree.Business.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.6.3.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.6.3\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -56,7 +60,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\NewItemNotifierService.cs" />
     <Compile Include="Service\SubscriberService.cs" />
+    <Compile Include="Util\HtmlAgilityPackHelper.cs" />
     <Compile Include="Util\WebRequestor.cs" />
+    <Compile Include="XmlReader\GumtreeXmlReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
